Refs #83074; Added isRestricted attribute to the JSON API
