# Products/Reportek/docs/api/swagger_api.yaml
@@ -233,6 +233,7 @@ paths:
                       schemaURL: http://foo/bar/schema.xsd
                       fileSize: 3679181
                       fileSizeHR: 3.51 MB
+                      isRestricted: 0
                   periodEndYear: 2014
                   status: Release
                   countryCode: RO
@@ -363,6 +364,12 @@ definitions:
           an archive attached to the envelope and if it can be opened.
         items:
           type: string
+      isRestricted:
+        type: integer
+        description: The document's restricted status
+        enum:
+          - 0
+          - 1
   History:
     type: object
     properties:
